# VitalVault

./: CONTRIBUTING.md  README.md
designdocs/: README.md  aisearchintegration.md  appux.md  fileinterface.md
r&d/: ml_pipeline.py
vitalvault_src/: README.md  app.json  package-lock.json  package.json  tailwind.config.js
vitalvault_src/app/: +not-found.tsx  _layout.tsx
vitalvault_src/app/(tabs)/: _layout.tsx  find.tsx  index.tsx  injest.tsx  manage.tsx  read.tsx
vitalvault_src/components/: loadingspin.tsx
vitalvault_src/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
vitalvault_src/src-tauri/src/: backend.rs  docstruct.rs  lib.rs  mlpipeline.rs
