[package]
name = "vitalvault"
version = "0.1.0"
description = "VitalVault is a platform for secure local storage and semantic retrival of medical documents"
authors = ["thelonious cooper<theloni@berkeley.edu>"]
license = "Affero GPLv3"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.5.0"
