[package]
name = "vitalvault"
version = "0.1.0"
description = "VitalVault is a platform for secure local storage and semantic retrival of medical documents"
authors = ["thelonious cooper<theloni@berkeley.edu>"]
license = "Affero GPLv3"
repository = "https://github.com/theloni-monk/VitalVault"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "vitalvault"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }
tauri-typegen = "0.4.0"

[dependencies]
oxidize-pdf = "1.6.7"
crc = "3.4.0"
serde = "*"
derive_more = { version = "2", features = ["debug"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2.6.0"
uuid = "1.17.0"
duckdb = { version = "1.4.3", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-stronghold = "2.3.1"
tauri-plugin-biometric = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2"
